erDiagram
    USERS ||--o{ ROLES : has
    USERS ||--o{ USER_ROLE : participates_in
    USERS ||--o{ BUS_COMPANIES : "belongs_to"
    USERS ||--o{ TICKETS : purchases
    USERS ||--o{ BUS_REVIEWS : writes
    USERS ||--o{ PAYMENTS : makes
    USERS ||--o{ CONVERSATIONS : initiates
    USERS ||--o{ REFRESH_TOKENS : generates
    USERS ||--o{ PASSWORD_RESET : requests
    USERS ||--o{ DISCOUNT_CODES : creates
    USERS ||--o{ DISCOUNT_USAGE : applies_discount
    USERS ||--o{ MESSAGES : sends
    USERS ||--o{ BUS_COMPANY_REGISTRATION : submits

    BUS_COMPANIES ||--o{ BUSES : owns
    BUS_COMPANIES ||--o{ ROUTES : manages

    BUSES ||--o{ SCHEDULES : runs
    BUSES ||--o{ SEATS : contains
    BUSES ||--o{ BUS_IMAGES : has
    BUSES ||--o{ BUS_REVIEWS : "receives"
    BUSES ||--o{ BUS_HISTORY : has_history
    BUSES ||--o{ BUS_STATION : participates_in
    BUSES ||--o{ DRIVERS : "assigned_to"

    STATIONS ||--o{ ROUTES : "departure_from"
    STATIONS ||--o{ ROUTES : "arrival_to"
    STATIONS ||--o{ BUS_STATION : participates_in
    STATIONS ||--o{ BUS_HISTORY : visits

    ROUTES ||--o{ SCHEDULES : has
    ROUTES ||--o{ BUS_HISTORY : has_history
    ROUTES ||--o{ CANCELLATION_POLICY : defines

    SCHEDULES ||--o{ TICKETS : contains
    SCHEDULES ||--o{ BUS_HISTORY : has_history

    SEATS ||--o{ TICKETS : "has_seat"

    TICKETS ||--o{ PAYMENTS : "related_to"
    TICKETS ||--o{ DISCOUNT_USAGE : "applies_discount"

    DISCOUNT_CODES ||--o{ TICKETS : applies
    DISCOUNT_CODES ||--o{ DISCOUNT_USAGE : uses

    PAYMENT_PROVIDERS ||--o{ PAYMENTS : "processes"

    ROLES ||--o{ USER_ROLE : assigned_in

    BUS_STATION ||--o{ BUSES : "references_bus"
    BUS_STATION ||--o{ STATIONS : "references_station"

    CONVERSATIONS ||--o{ MESSAGES : contains

    USERS {
        int id PK
        string firstName
        string lastName
        string email UK
        string password
        string phone
        enum status
        int bus_company_id FK
        timestamp created_at
        timestamp updated_at
    }

    BUS_COMPANIES {
        int id PK
        string company_name
        string image
        text descriptions
        timestamp created_at
        timestamp updated_at
    }

    BUSES {
        int id PK
        string name
        text descriptions
        string license_plate
        int capacity
        enum status
        enum bus_type
        int company_id FK
        timestamp created_at
        timestamp updated_at
    }

    STATIONS {
        int id PK
        string name
        string image
        string wallpaper
        text descriptions
        string location
        timestamp created_at
        timestamp updated_at
    }

    ROUTES {
        int id PK
        string route_name
        string start_location
        string end_location
        decimal price
        int duration
        int distance
        text descriptions
        enum status
        int departure_station_id FK
        int arrival_station_id FK
        int bus_company_id FK
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }

    SCHEDULES {
        int id PK
        timestamp departure_time
        timestamp arrival_time
        int available_seat
        int total_seats
        enum status
        int route_id FK
        int bus_id FK
        timestamp created_at
        timestamp updated_at
    }

    SEATS {
        int id PK
        string seat_number
        enum seat_type
        enum status
        decimal price_for_seat_type
        int bus_id FK
        int row_num
        int column_num
        timestamp created_at
        timestamp updated_at
    }

    TICKETS {
        int id PK
        timestamp departure_time
        timestamp arrival_time
        enum seat_type
        decimal price
        decimal original_price
        decimal discount_amount
        enum status
        string ticket_code UK
        int schedule_id FK
        int seat_id FK
        int user_id FK
        int discount_code_id FK
        timestamp created_at
        timestamp updated_at
    }

    DISCOUNT_CODES {
        int id PK
        string code UK
        string name
        text description
        enum type
        decimal value
        decimal max_discount_amount
        decimal min_order_amount
        int usage_limit
        int used_count
        timestamp expired_at
        int created_by FK
        timestamp created_at
        timestamp updated_at
    }

    DISCOUNT_USAGE {
        int id PK
        int user_id FK
        int ticket_id FK
        int discount_code_id FK
        decimal used_amount
        timestamp created_at
        timestamp updated_at
    }

    PAYMENTS {
        int id PK
        enum payment_method
        decimal amount
        enum status
        int payment_provider_id FK
        int user_id FK
        int ticket_id FK
        timestamp created_at
        timestamp updated_at
    }

    PAYMENT_PROVIDERS {
        int id PK
        string provider_name
        enum provider_type
        string api_endpoint
        timestamp created_at
        timestamp updated_at
    }

    DRIVERS {
        int id PK
        string full_name
        string phone UK
        string email
        string license_number UK
        string license_type
        date license_expiry_date
        date date_of_birth
        text address
        enum status
        int current_bus_id FK
        timestamp created_at
        timestamp updated_at
    }

    BUS_REVIEWS {
        int id PK
        int rating
        text review
        int user_id FK
        int bus_id FK
        timestamp created_at
        timestamp updated_at
    }

    BUS_HISTORY {
        int id PK
        timestamp departure_time
        timestamp arrival_time
        timestamp actual_departure_time
        timestamp actual_arrival_time
        enum status
        int total_passengers
        decimal total_revenue
        text notes
        int bus_id FK
        int route_id FK
        int schedule_id FK
        int station_id FK
        timestamp created_at
    }

    BUS_IMAGES {
        int id PK
        string image_url
        int bus_id FK
        timestamp created_at
        timestamp updated_at
    }

    BUS_STATION {
        int id PK
        int bus_id FK
        int station_id FK
        boolean is_active
        text notes
        timestamp created_at
        timestamp updated_at
    }

    ROLES {
        int id PK
        enum role_name
    }

    USER_ROLE {
        int user_id FK
        int role_id FK
    }

    REFRESH_TOKENS {
        int id PK
        text token
        int user_id FK
        timestamp expiry_date
        timestamp created_at
    }

    PASSWORD_RESET {
        int id PK
        int user_id FK
        string otp
        timestamp expiry_date
        timestamp created_at
    }

    CONVERSATIONS {
        int id PK
        int user_id FK
        int admin_id FK
        timestamp created_at
        timestamp updated_at
    }

    MESSAGES {
        int id PK
        text content
        enum message_type
        int sender_id FK
        int conversation_id FK
        timestamp created_at
        timestamp updated_at
    }

    CANCELLATION_POLICY {
        int id PK
        int refund_percentage
        int cancellation_deadline
        int route_id FK
        timestamp created_at
        timestamp updated_at
    }

    BUS_COMPANY_REGISTRATION {
        int id PK
        string company_name
        string registration_number
        enum status
        int user_id FK
        timestamp created_at
        timestamp updated_at
    }
